recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: not found: value currentstep
currentstep(steps-1,length+shrink,angle,shrink)
^